--- a/app/src/main/res/layout/activity_vintea59.xml
+++ b/app/src/main/res/layout/activity_vintea59.xml
@@ -52,7 +52,7 @@
                 android:text=" • Dupla Adulto - dT (1)\n\n
 • Hepatite B (2)\n\n
 • Tríplice viral - SCR (3)\n\n
-• Febre Amarela (4)"
+• Febre Amarela - Dose única (4)"
                 android:textColor="@android:color/black"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView2" />
