--- a/app/src/main/res/layout/activity_sobre.xml
+++ b/app/src/main/res/layout/activity_sobre.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -48,8 +48,7 @@
                 android:text="O aplicativo Calendário de Vacinação, foi desenvolvido visando atender à necessidade dos profissionais e estudantes das diversas áreas da saúde, sobre a atualização nas constantes melhorias do Programa Nacional de Imunização.\n\n
 Ele também serve de orientação para qualquer pessoa que busque ampliar seus conhecimentos acerca das vacinas disponibilizadas pelo Governo Federal, através das Unidades Básicas de Saúde distribuídas e todo o território brasileiro.\n\n
 Foi usado como fonte bibliográfica o Manual de Normas e Procedimentos para Vacinação do Ministério da Saúde – ano 2014, bem como as publicações e recomendações disponibilizadas no site do Ministério da Saúde.\n\n
-Atualizado em outubro de 2018.
-"
+Atualizado em março de 2019."
                 android:textColor="@android:color/black"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -87,4 +86,4 @@ Atualmente, estudante de Analise e Desenvolvimento de Sistemas, e tendo como obj
     </ScrollView>
 
 
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.ConstraintLayout>
